--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.1",
+    "react-typist-loop": "0.0.5",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.0"
   },
